[gd_scene load_steps=19 format=3 uid="uid://3ng0sxw7uo1m"]

[ext_resource type="Script" path="res://Scripts/Classes/Enemies/ShelllessKoopa.gd" id="1_v8g75"]
[ext_resource type="Texture2D" uid="uid://dxeqpojk5p8j1" path="res://Assets/Sprites/Enemys/Koopas/Shell-less Koopa/Red.png" id="2_rph0c"]
[ext_resource type="PackedScene" uid="uid://xqivdp4tj0se" path="res://Instances/Particles/Player/skid.tscn" id="4_7f6wc"]
[ext_resource type="Script" path="res://Scripts/Classes/ledge_detection.gd" id="4_5061u"]
[ext_resource type="Script" path="res://Scripts/Classes/water_bouyancy.gd" id="5_ipinh"]

[sub_resource type="Animation" id="Animation_ej5ur"]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_n7d82"]
resource_name = "Kick"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_w5v0n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_jcekc"]
resource_name = "ShellExit"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_qqkl5"]
resource_name = "Slide"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_m6vsd"]
resource_name = "SlideIdle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_gjaxs"]
resource_name = "SpecialWalk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_41i8u"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_usmt8"]
_data = {
&"Die": SubResource("Animation_ej5ur"),
&"Kick": SubResource("Animation_n7d82"),
&"RESET": SubResource("Animation_w5v0n"),
&"ShellExit": SubResource("Animation_jcekc"),
&"Slide": SubResource("Animation_qqkl5"),
&"SlideIdle": SubResource("Animation_m6vsd"),
&"SpecialWalk": SubResource("Animation_gjaxs"),
&"Walk": SubResource("Animation_41i8u")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ehxmg"]
size = Vector2(14, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uq41g"]
size = Vector2(16, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ui3j"]
size = Vector2(32, 9)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1jk0s"]
resource_local_to_scene = true
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3(-10, -0.5, 0)
spread = 22.0
initial_velocity_min = 5.0
initial_velocity_max = 10.0
gravity = Vector3(0, 0, 0)
anim_speed_min = 2.0
anim_speed_max = 2.0

[node name="ShelllessKoopa" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 12
floor_stop_on_slope = false
floor_constant_speed = true
floor_max_angle = 1.22173
floor_snap_length = 4.0
script = ExtResource("1_v8g75")
enemy_height = 8
yoshi_behavior = "Swallow"

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_rph0c")
hframes = 2
vframes = 9
frame = 8

[node name="Animations" type="AnimationPlayer" parent="Sprite"]
libraries = {
&"": SubResource("AnimationLibrary_usmt8")
}

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_ehxmg")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(0, -6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_uq41g")
debug_color = Color(0, 0.6, 0, 0.419608)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(0, -8)

[node name="BlueShellDetect" type="Node2D" parent="."]

[node name="Hitbox" type="Area2D" parent="BlueShellDetect"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlueShellDetect/Hitbox"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_0ui3j")

[node name="Skid" parent="." instance=ExtResource("4_7f6wc")]
emitting = false
process_material = SubResource("ParticleProcessMaterial_1jk0s")

[node name="FloorCheck" type="RayCast2D" parent="."]
position = Vector2(-6, -15)
target_position = Vector2(0, 30)
script = ExtResource("4_5061u")
ray_length = 30

[node name="WaterBouyancy" type="Node" parent="." node_paths=PackedStringArray("hitbox")]
script = ExtResource("5_ipinh")
hitbox = NodePath("../Hitbox")

[connection signal="area_entered" from="Hitbox" to="." method="check_hit"]
[connection signal="area_entered" from="BlueShellDetect/Hitbox" to="." method="_on_hitbox_area_entered"]
